<resources>
    <string name="app_name">TAWILib</string>
    <string name="tawi_library">TAWI LIBRARY</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>

    <string name="failed_register">Failed to register account! Please retry.</string>
    <string name="retry">Retry</string>

    <string name="welcome">welcome</string>
    <string name="back">BACK</string>
    <string name="search">Search</string>
    <string name="delete">DELETE</string>

    <string name="registration_successful">Registration successful. Now sign in with your new account</string>
    <string name="login_successful">Login Successful</string>

    <string name="my_name">My Name</string>

    <string name="book_cover">MY BOOK COVER</string>
    <string name="book_author">Author: Daniel Craige</string>
    <string name="book_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip…
    </string>
    <string name="book_date">Thu Aug 25 2022 11:05:39 GMT+0800</string>

    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="about">About</string>
    <string name="about_">About...</string>
    <string name="date_tap">Date (Tap)</string>

    <string name="movie_cover">MOVIE COVER</string>

    <string name="_continue">Continue</string>
    <string name="are_you_sure_you_logout">Are you want to logout?</string>
    <string name="discard_all_changes">Discard all changes?</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="save">save</string>
    <string name="books">Books</string>

    <string name="options">Options</string>
    <string name="select_media_options">Select media options</string>
    <string name="gallery_tap">GALLERY (TAP)</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>

    <string name="please_fill_up_missing_fields">Please fill up missing fields! (Mark Red)</string>
    <string name="please_add_book_cover">Please add book cover!</string>

    <string name="book_successfully_added">Book successfully added to library!</string>
    <string name="book_successfully_updated">Book successfully updated to library!</string>
    <string name="book_successfully_deleted">Book successfully deleted to library!</string>
</resources>