<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tawi_library"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/sign_up" />
</LinearLayout>