<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/shape_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/book_cover" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:weightSum="6">

            <TextView
                android:id="@+id/txt_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/book_cover"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/txt_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/book_author"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_book_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/about"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/book_description"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_book_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/book_date"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>