<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="318dp"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
            app:drawableTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/shape_text"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/shape_text"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/shape_text"
                android:ems="10"
                android:hint="@string/conf_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/shape_button"
                android:text="@string/sign_up"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layout_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>