<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E3E3"
    tools:context=".ui.main.add.EditBookFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/back"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
                app:drawableTint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/secondaryColor"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_title"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_text"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/txt_author"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_text"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890-. "
                    android:ems="10"
                    android:hint="@string/author"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/txt_about"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_text"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/about_"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/shape_text"
                        android:hint="@string/date_tap"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="12dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/txt_date_formatted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="10sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardCornerRadius="10dp">

                        <ImageButton
                            android:id="@+id/img_gallery"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/book_cover"
                            android:src="@drawable/ic_baseline_add_24" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery_tap"
                        android:textAlignment="center"
                        android:textSize="10sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_button"
                    android:text="@string/save"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>